# haddan_bot

./: .env.example  .gitignore  LINECSE  README.md  async_test.py  patch_note.txt  pyproject.toml  requirements.txt  ruff.toml  tel_bot.py
app/: Dockerfile  alembic.ini  config.py  configs.py  constants.py  develop.py  di.py  haddan_bot.py  haddan_tk.py  labirint.py  main.py  maze_utils.py  requirements.txt  utils.py
app/admin/: app.py  services.py
app/aio_bot/: aiobot_manager.py  constants.py  main.py
app/alembic/: env.py
app/alembic/versions/: 0063cf8ed1e8_initial_migration.py  18453cf7a796_initial_migration.py  2cdde16b7bc7_initial_migration.py  48acbf73a83f_initial_migration.py  93bd1d3b1fdf_added_useraccess_table.py  f1bbe4203c1b_initial_migration.py  fc813792454e_initial_migration.py
app/bot_classes/: __init__.py  async_manager.py  constants.py  driver_manager.py  haddan_bot.py  haddan_classes.py  services.py  trash.py
app/bot_classes/haddan_classes/: __init__.py  common_driver.py  fight_driver.py  haddan_driver_manager.py  spirit_play.py  user.py
app/dao/: __init__.py  database.py  models.py  services.py
app/dao/crud/: __init__.py  base.py  event.py  preset.py  slot_spell.py  spell_book.py  useraccess.py
app/migration/: env.py
app/migration/versions/: 725b72902557_initial_migration.py  91de87ad2c63_initial_migration.py  d05c22406a19_spell_book_model_create.py
app/tk_app/: __init__.py  core.py  driver_manager.py  utils.py
app/tk_app/interface/: utils.py
had_infra/: docker-compose.local.yml
tests/: conftest.py  test_constants.py
(+27 files in other folders)
