[project]
name = "haddan-bot"
version = "0.1.0"
description = "Easy Bot for haddan.ru"
readme = "README.md"
requires-python = ">=3.13,<3.15"
dependencies = [
    "aiogram>=3.22.0",
    "loguru>=0.7.3",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "ruff>=0.12.9",
    "selenium>=4.35.0",
    "setuptools>=80.9.0",
    "sqladmin>=0.21.0",
    "sqlalchemy>=2.0.43",
    "undetected-chromedriver>=3.5.5",
    "webdriver-manager>=4.0.2",
    "punq (>=0.7.0,<0.8.0)",
    "pyinstaller (>=6.16.0,<7.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "uvicorn (>=0.37.0,<0.38.0)",
    "fastapi (>=0.117.1,<0.118.0)",
    "pytest (>=8.4.2,<9.0.0)",
]
package-mode = false